# ellipsoid

./: .gitignore  BUILD.sh  CMakeLists.txt  MAKE  README.md  TODO.txt
dependencies/GLAD/include/glad/: gl.h  glad.h  vulkan.h
dependencies/GLAD/src/: glad.c  vulkan.c
ellipsoid/: CMakeLists.txt
ellipsoid/opengl/: CMakeLists.txt  camera.cpp  camera.hpp  ellipsoid.hpp  material.cpp  material.hpp  ortho_camera.cpp  persp_camera.cpp  renderer.hpp  renderer3d.cpp  shape.cpp  shape.hpp
ellipsoid/opengl/buffers/: buffers.hpp  ebo.cpp  ubo.cpp  vao.cpp  vbo.cpp
ellipsoid/opengl/core/: shader.cpp  shader.hpp  texture.cpp  texture.hpp  texture2d.cpp  transform.cpp  transform.hpp  window.cpp  window.hpp
ellipsoid/utils/: CMakeLists.txt  color.cpp  color.hpp  image.cpp  image.hpp
ellipsoid/vulkan/: CMakeLists.txt
examples/hello_world/: CMakeLists.txt
examples/opengl/hello_world/: CMakeLists.txt  main.cpp
examples/opengl/hello_world/res/shader/: hello_world.vert
examples/opengl/hello_world/resources/shader/: hello_world.frag
src/: CMakeLists.txt
src/opengl/: CMakeLists.txt  buffers.hpp  shader.cpp  shader.hpp  transform.cpp  transform.hpp  vao.cpp  window.cpp  window.hpp
src/opengl/buffers/: buffers.hpp  ebo.cpp  ubo.cpp  vao.cpp  vbo.cpp
src/opengl/core/: shader.cpp  shader.hpp  transform.cpp  transform.hpp  window.cpp  window.hpp
src/vulkan/: CMakeLists.txt
